--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -28,5 +31,11 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.13",
     "vite": "^5.2.10"
+  },
+  "overrides": {
+    "rollup": "npm:@rollup/wasm-node@4.52.4"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.52.4"
   }
 }
